k8s/overlays/local/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost-postgres
  namespace: user-management
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 5050
        path: /pgadmin
        pathType: Prefix
